# fww_study

./: .gitignore  CMakeLists.txt  README.md
doc/: CMakelists.md  CSR基础.ipynb  FEM.ipynb  Python notebook.ipynb  README.md  SUMMARY.md  Untitled.ipynb  c++.md  optimization.ipynb  problem.md  test.py
doc/_book/: CMakelists.html  index.html  problem.html  search_index.json
doc/_book/lagrangian/: SUMMARY.md  basis2d.md
doc/_book/notebook/: CSR.ipynb  Python-numpy.ipynb  optimization.ipynb  parallel_computing.ipynb
doc/lagrangian/: basis3d.md
doc/mesh/: fem.py  mesh.py  meshtest.py  tool.py
doc/notebook/:  possion equation.ipynb  A Hybrid Method.ipynb  A grid bases particle method.ipynb  A moving Langrangian interface technique.ipynb  An Eulerian Formulation.ipynb  Delaunary mesh.ipynb  ENO AND WENO.ipynb  FEM.ipynb  Immersed interface method.ipynb  Python notebook.ipynb  Tree Methods.ipynb  Untitled.ipynb  Untitled1.ipynb  eqution.ipynb  methods.ipynb  界面问题.ipynb
doc/py_example/: budget.py  class.py  equipment.py  exception.py  fem.py  my_range.py  power.py  rank.py  root.py  stone.py  sum.py  sxhs.py  travel.py
include/: Mycomplex.h  Sparse.h  sparse_matrix.h  stock00.h
pyfem/: fem.py  memoization_test.py  mesh.py
src/: sparse_matrix.h
test/: CGAL_test.cpp  CMakeLists.txt  Sparse.cpp  arrayone.cpp  carrots.cpp  convert.cpp  index.cpp  morechar.cpp  normL2.cpp  ourfun.cpp  power.cpp  rank.cpp  revers.cpp  root.cpp  sparse_matrix.cpp  sqrt.cpp  stock00.cpp  sum.cpp  sxhs.cpp  test1.cpp  test2.cpp  test3.cpp  triangle.cpp  vec.cpp
(+48 files in other folders)
